<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.EditNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editNoteType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="TextView"
            android:textColor="#911919"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/editImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            app:srcCompat="@drawable/ic_alarm"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/editTextAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="TextView" />
    </LinearLayout>

    <EditText
        android:id="@+id/editEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_title"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editEditDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/editBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="650dp"
        android:text="save" />

    <Button
        android:id="@+id/editBtnAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="650dp"
        android:text="alarm" />

    <TextView
        android:id="@+id/editEditDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="484dp"
        android:text="@string/date"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editEditDay"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="513dp"
        android:ems="10"
        android:hint="dd"
        android:inputType="date"
        android:visibility="gone" />

    <TextView
        android:id="@+id/slash3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="198dp"
        android:layout_marginTop="513dp"
        android:text="@string/slash"
        android:textSize="40sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editEditMonth"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="211dp"
        android:layout_marginTop="513dp"
        android:ems="10"
        android:hint="mm"
        android:inputType="date"
        android:visibility="gone" />

    <TextView
        android:id="@+id/slash4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="513dp"
        android:text="@string/slash"
        android:textSize="40sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editEditYear"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="255dp"
        android:layout_marginTop="513dp"
        android:ems="10"
        android:hint="yyyy"
        android:inputType="date"
        android:visibility="gone" />

    <TextView
        android:id="@+id/editEditTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="307dp"
        android:layout_marginTop="484dp"
        android:text="Time"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editEditHr"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="309dp"
        android:layout_marginTop="513dp"
        android:ems="10"
        android:hint="hh"
        android:inputType="time"
        android:visibility="gone" />

    <TextView
        android:id="@+id/colon2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="513dp"
        android:text="@string/colon"
        android:textSize="40sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editEditMin"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="347dp"
        android:layout_marginTop="513dp"
        android:ems="10"
        android:hint="mm"
        android:inputType="time"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/editRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="460dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/editRadioButtonAlarmDaily"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Daily"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/editRadioButtonAlarmWeekly"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Weekly"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/editViewWeekly"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="564dp"
        android:visibility="gone"
        android:text="Mon  Tue  Wed  Thu  Fri   Sat   Sun"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxSun2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="368dp"
        android:layout_marginTop="531dp"
        android:button="@drawable/button_type"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBoxMon2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="530dp"
        android:button="@drawable/button_type"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBoxTue2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="530dp"
        android:button="@drawable/button_type"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBoxWed2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="530dp"
        android:button="@drawable/button_type"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBoxThur2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="263dp"
        android:layout_marginTop="530dp"
        android:button="@drawable/button_type"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBoxFri2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="297dp"
        android:layout_marginTop="530dp"
        android:visibility="gone"
        android:button="@drawable/button_type" />

    <CheckBox
        android:id="@+id/checkBoxSat2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="333dp"
        android:layout_marginTop="530dp"
        android:visibility="gone"
        android:button="@drawable/button_type" />

</FrameLayout>